Update Blog Posts “2023-07-01-cms-demo”

--- a/posts/2023-07-01-cms-demo.md
+++ b/posts/2023-07-01-cms-demo.md
@@ -2,7 +2,7 @@
 layout: blog
 title: CMS DEMO
 date: 2023-06-29T19:37:00.230Z
-thumbnail: /images/adi-goldstein-hli3r6lkibo-unsplash.jpg
+thumbnail: /images/allgo-an-app-for-plus-size-people-zabdszjnftq-unsplash.jpg
 rating: 3
 ---
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lacus vel facilisis volutpat est velit. Arcu dui vivamus arcu felis bibendum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. A pellentesque sit amet porttitor eget dolor. Odio eu feugiat pretium nibh ipsum consequat nisl. At varius vel pharetra vel turpis nunc eget lorem dolor. Eget nunc lobortis mattis aliquam faucibus purus in massa tempor. Pulvinar neque laoreet suspendisse interdum consectetur libero. Lacus sed turpis tincidunt id.
+WE DID IT! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lacus vel facilisis volutpat est velit. Arcu dui vivamus arcu felis bibendum. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. A pellentesque sit amet porttitor eget dolor. Odio eu feugiat pretium nibh ipsum consequat nisl. At varius vel pharetra vel turpis nunc eget lorem dolor. Eget nunc lobortis mattis aliquam faucibus purus in massa tempor. Pulvinar neque laoreet suspendisse interdum consectetur libero. Lacus sed turpis tincidun
